--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,11 +62,11 @@
 }
 
 .black_btn {
-  @apply rounded-full border border-slate-800 bg-slate-800 py-1.5 px-5 text-white transition-all  hover:text-slate-800 text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-slate-800 hover:bg-white py-1.5 px-5 transition-all  text-slate-50 hover:text-slate-800 bg-slate-800 text-center text-sm font-inter flex items-center justify-center;
 }
 
 .outline_btn {
-  @apply rounded-full border border-slate-800 bg-transparent py-1.5 px-5 text-slate-100 transition-all hover:bg-slate-800 hover:text-slate-300 text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-slate-800 bg-transparent py-1.5 px-5 text-slate-100 transition-all hover:bg-slate-50 hover:text-slate-800 text-center text-sm font-inter flex items-center justify-center;
 }
 
 .head_text {
