--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,9 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* 
-  Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
-*/
 
 .main {
   width: 100vw;
@@ -58,7 +55,7 @@
 /* Tailwind Styles */
 
 .app {
-  @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
+  @apply relative z-10 flex justify-center items-center flex-col min-h-screen;
 }
 
 .black_btn {
@@ -102,7 +99,7 @@
 }
 
 .prompt_layout {
-  @apply space-y-6 py-8 sm:columns-2 sm:gap-6 xl:columns-3;
+  @apply space-y-6 py-8 sm:columns-2 sm:gap-6 lg:columns-3;
 }
 
 /* Feed Component */
@@ -134,7 +131,7 @@
 
 /* PromptCard Component */
 .prompt_card {
-  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/90 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
+  @apply flex-1 break-inside-avoid md:min-w-[350px] rounded-lg border border-gray-300 bg-white/90 bg-clip-padding p-4 md:px-8 pb-2 backdrop-blur-lg backdrop-filter w-full h-fit;
 }
 
 .flex-center {
